--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libfaad2-sys/faad2"]
-	path = libfaad2-sys/faad2
+[submodule "faad2-sys/faad2"]
+	path = faad2-sys/faad2
 	url = https://github.com/knik0/faad2
