add metadata to manifests

--- a/faad2-sys/Cargo.toml
+++ b/faad2-sys/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.0.0"
 authors = ["Hailey Somerville <hailey@hailey.lol>"]
 edition = "2018"
 license = "GPL-2.0"
+description = "FFI bindings for libfaad2"
+homepage = "https://github.com/haileys/faad2-rs"
+repository = "https://github.com/haileys/faad2-rs"
 
 [dependencies]
 
